--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -1,14 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net46;netstandard1.6</TargetFrameworks>
+		<TargetFrameworks>net46</TargetFrameworks>
 		
 		<AssemblyName>AlephNote.Common</AssemblyName>
 		<PackageId>AlephNote.Common</PackageId>
 
-		<NetStandardImplicitPackageVersion>0.0.0</NetStandardImplicitPackageVersion>
-		<PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
-		
 		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
 		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
 		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
@@ -21,11 +18,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
 		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
 		<PackageReference Include="System.IO.FileSystem.Watcher" Version="4.3.0" />
 		<PackageReference Include="System.Net.Http" Version="4.3.3" />
-		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
+		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.0" />
 		<PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
 		<PackageReference Include="System.Threading.Thread" Version="4.3.0" />
 		<PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
@@ -33,14 +30,8 @@
 		<PackageReference Include="System.Net.Requests" Version="4.3.0" />
 	</ItemGroup>
 
-	<ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+	<ItemGroup>
 		<Reference Include="Microsoft.CSharp" />
-	</ItemGroup>
-
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-		<PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.0" />
-		<PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
-		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
 	</ItemGroup>
 
 </Project>
