--- a/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
+++ b/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net46;netstandard1.6</TargetFrameworks>
+		<TargetFrameworks>net46</TargetFrameworks>
 
 		<AssemblyName>StandardNotePlugin</AssemblyName>
 		<PackageId>StandardNotePlugin</PackageId>
-		
+
 		<AssemblyVersion>1.3.1.0</AssemblyVersion>
 		<FileVersion>1.3.1.0</FileVersion>
 		<Version>1.3.1.0</Version>
@@ -20,17 +20,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
-		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
+		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.0">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
+
+		<PackageReference Include="System.Xml.XDocument" Version="4.3.0">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
-	<ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+	<ItemGroup>
 		<Reference Include="System" />
 		<Reference Include="Microsoft.CSharp" />
-	</ItemGroup>
-
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
