--- a/Source/AlephNote.App/packages.config
+++ b/Source/AlephNote.App/packages.config
@@ -52,4 +52,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net461" />
 </packages>
