Working on TokenizedTagControl (WIP)
--> references #64

--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -200,6 +200,7 @@
       <DependentUpon>PHelpBtn.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPF\Controls\ShortcutBox.cs" />
+    <Compile Include="WPF\Controls\TagCtrl\ITagEditor.cs" />
     <Compile Include="WPF\Controls\TagCtrl\TagEditor.xaml.cs">
       <DependentUpon>TagEditor.xaml</DependentUpon>
     </Compile>
