Moved logic back to CSharpUtils library (1)

--- a/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
+++ b/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
@@ -21,6 +21,13 @@
 		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0">
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
+
+		<ProjectReference Include="..\External\CSharpUtils\CSharpUtils.csproj" >
+			<Private>false</Private>
+		</ProjectReference>
+</ItemGroup>
+
+	<ItemGroup>
 	</ItemGroup>
 
 	<ItemGroup>
