--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -19,21 +19,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
-		<PackageReference Include="System.IO.Compression" Version="4.3.0" />
-		<PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
-		<PackageReference Include="System.IO.FileSystem.Watcher" Version="4.3.0" />
-		<PackageReference Include="System.Net.Http" Version="4.3.4" />
-		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.1" />
-		<PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
-		<PackageReference Include="System.Threading.Thread" Version="4.3.0" />
-		<PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
-		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
-		<PackageReference Include="System.Net.Requests" Version="4.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Reference Include="Microsoft.CSharp" />
+		<Reference Include="System.IO.Compression" />
+		<Reference Include="System.Net" />
+		<Reference Include="System.Net.Http" />
 	</ItemGroup>
 
 </Project>
