--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -512,6 +512,11 @@
       <TargetPath>Themes\no-scrollbars.xml</TargetPath>
       <SubType>Designer</SubType>
     </ContentWithTargetPath>
+    <ContentWithTargetPath Include="Resources\themes\stachybotrys.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <TargetPath>Themes\stachybotrys.zip</TargetPath>
+      <SubType>Designer</SubType>
+    </ContentWithTargetPath>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\Lib\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\..\Lib\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
