StandardNotes: Add (option) to generate tags for folder extension plugin.
Also add option to control modification date behaivor
Also general StandardNotes improvements

--> references #171

--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -181,6 +181,7 @@
     </Compile>
     <Compile Include="WPF\Extensions\ThemeSlaveBinding.cs" />
     <Compile Include="WPF\Util\AlephWPFContext.cs" />
+    <Compile Include="WPF\Util\AutoEnumComboBox.cs" />
     <Compile Include="WPF\Util\CaptureMouseWheelWhenUnfocusedBehavior.cs" />
     <Compile Include="WPF\Util\CheckableTag.cs" />
     <Compile Include="WPF\ScintillaUtil\ListHighlightValue.cs" />
