--- a/Source/AlephNote.App/packages.config
+++ b/Source/AlephNote.App/packages.config
@@ -8,6 +8,7 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net45" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net461" />
 </packages>
