--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -18,6 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.2.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
 	</ItemGroup>
 
