--- a/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
+++ b/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
@@ -6,9 +6,9 @@
 		<AssemblyName>StandardNotePlugin</AssemblyName>
 		<PackageId>StandardNotePlugin</PackageId>
 
-		<AssemblyVersion>1.6.2.0</AssemblyVersion>
-		<FileVersion>1.6.2.0</FileVersion>
-		<Version>1.6.2.0</Version>
+		<AssemblyVersion>1.7.0.0</AssemblyVersion>
+		<FileVersion>1.7.0.0</FileVersion>
+		<Version>1.7.0.0</Version>
 
 		<OutDir>..\..\..\Bin\$(Configuration)\$(TargetFramework)\Plugins\</OutDir>
 
@@ -26,6 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.2.1" />
 		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.6.0">
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
