--- a/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
+++ b/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net46</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 
 		<AssemblyName>EvernotePlugin</AssemblyName>
 		<PackageId>EvernotePlugin</PackageId>
@@ -22,7 +22,7 @@
 			<Private>false</Private>
 		</ProjectReference>
 
-		<ProjectReference Include="..\..\External\CSharpUtils\CSharpUtils.csproj"> <!-- This is only here to prevent CSharpUtils.dll in the /Plugins/ directory  -->
+		<ProjectReference Include="..\..\External\CSharpUtils\LanguageUtils\LanguageUtils.csproj"> <!-- This is only here to prevent LanguageUtils.dll in the /Plugins/ directory  -->
 			<Private>false</Private>
 		</ProjectReference>
 	</ItemGroup>
@@ -47,11 +47,6 @@
 		<PackageReference Include="System.Xml.XDocument" Version="4.3.0">
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup>
-		<Reference Include="System" />
-		<Reference Include="Microsoft.CSharp" />
 	</ItemGroup>
 
 	<ItemGroup>
