--- a/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
+++ b/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net46</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0</TargetFrameworks>
 
 		<AssemblyName>StandardNotePlugin</AssemblyName>
 		<PackageId>StandardNotePlugin</PackageId>
@@ -20,13 +20,12 @@
 			<Private>false</Private>
 		</ProjectReference>
 
-		<ProjectReference Include="..\..\External\CSharpUtils\CSharpUtils.csproj"> <!-- This is only here to prevent CSharpUtils.dll in the /Plugins/ directory  -->
+		<ProjectReference Include="..\..\External\CSharpUtils\LanguageUtils\LanguageUtils.csproj"> <!-- This is only here to prevent LanguageUtils.dll in the /Plugins/ directory  -->
 			<Private>false</Private>
 		</ProjectReference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.2.1" />
 		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.6.0">
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
@@ -34,11 +33,6 @@
 		<PackageReference Include="System.Xml.XDocument" Version="4.3.0">
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</PackageReference>
-	</ItemGroup>
-
-	<ItemGroup>
-		<Reference Include="System" />
-		<Reference Include="Microsoft.CSharp" />
 	</ItemGroup>
 
 	<ItemGroup>
