--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -10,7 +10,7 @@
 		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
 		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
 
-		<OutDir>..\..\Bin\$(Configuration)\$(TargetFramework)\</OutDir>
+		<OutDir>..\..\Bin\$(Configuration)\</OutDir>
 	</PropertyGroup>
 
 	<ItemGroup>
