--- a/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
+++ b/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
@@ -12,7 +12,7 @@
 
 		<DefineConstants>NETFX_CORE</DefineConstants>
 
-		<OutDir>..\..\..\Bin\$(Configuration)\$(TargetFramework)\Plugins\</OutDir>
+		<OutDir>..\..\..\Bin\$(Configuration)\Plugins\</OutDir>
 
 		<RootNamespace>AlephNote.Plugins.Evernote</RootNamespace>
 	</PropertyGroup>
