--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -5,10 +5,10 @@
     <TargetFramework>net48</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
+    
     <ApplicationIcon>IconMain.ico</ApplicationIcon>
-
-    <AssemblyName>AlephNote</AssemblyName>
-    <PackageId>AlephNote</PackageId>
+    
+    <RootNamespace>AlephNote</RootNamespace>
 
     <AssemblyTitle>AlephNote.App</AssemblyTitle>
     <AssemblyDescription>A Note client for multiple online or local backends</AssemblyDescription>
@@ -19,10 +19,63 @@
     <AssemblyVersion>1.6.37.0</AssemblyVersion>
     <AssemblyFileVersion>1.6.37.0</AssemblyFileVersion>
     <AssemblyInformationalVersion>1.6.37.0-master</AssemblyInformationalVersion>
-    
-    <OutDir>..\..\Bin\$(Configuration)\$(TargetFramework)\</OutDir>
+
+    <OutDir>..\..\Bin\$(Configuration)\</OutDir>
   </PropertyGroup>
-  
+
+  <ItemGroup>
+    <ContentWithTargetPath Include="Resources\themes\alt_iconset.zip"        CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\alt_iconset.zip" />
+    <ContentWithTargetPath Include="Resources\themes\solarized-dark.xml"     CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\solarized-dark.xml" />
+    <ContentWithTargetPath Include="Resources\themes\solarized-light.xml"    CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\solarized-light.xml" />
+    <ContentWithTargetPath Include="Resources\themes\default.xml"            CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\default.xml" />
+    <ContentWithTargetPath Include="Resources\themes\monokai-neo.xml"        CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\monokai-neo.xml" />
+    <ContentWithTargetPath Include="Resources\themes\highcontrast-white.xml" CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\highcontrast-white.xml" />
+    <ContentWithTargetPath Include="Resources\themes\highcontrast-black.xml" CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\highcontrast-black.xml" />
+    <ContentWithTargetPath Include="Resources\themes\compact-sidebar.xml"    CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\compact-sidebar.xml" />
+    <ContentWithTargetPath Include="Resources\themes\wide-sidebar.xml"       CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\wide-sidebar.xml" />
+    <ContentWithTargetPath Include="Resources\themes\no-scrollbars.xml"      CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\no-scrollbars.xml" />
+    <ContentWithTargetPath Include="Resources\themes\stachybotrys.zip"       CopyToOutputDirectory="PreserveNewest" TargetPath="Themes\stachybotrys.zip" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="IconMain.ico" />
+    <Resource Include="Resources\folder_all.png" />
+    <Resource Include="Resources\folder_any.png" />
+    <Resource Include="Resources\folder_none.png" />
+    <Resource Include="Resources\folder_root.png" />
+    <Resource Include="Resources\github.png" />
+    <Resource Include="Resources\HelpTexts.txt" />
+    <Resource Include="Resources\IconGreen.ico" />
+    <Resource Include="Resources\IconMain.png" />
+    <Resource Include="Resources\IconMainBig.png" />
+    <Resource Include="Resources\IconRed.ico" />
+    <Resource Include="Resources\IconSync.ico" />
+    <Resource Include="Resources\IconYellow.ico" />
+    <Resource Include="Resources\lock.png" />
+    <Resource Include="Resources\lock_open.png" />
+    <Resource Include="Resources\lock_small.png" />
+    <Resource Include="Resources\LoremIpsum.txt" />
+    <Resource Include="Resources\margin_check_mix.png" />
+    <Resource Include="Resources\margin_check_off.png" />
+    <Resource Include="Resources\margin_check_on.png" />
+    <Resource Include="Resources\plus.png" />
+    <Resource Include="Resources\refresh.png" />
+    <Resource Include="Resources\star.png" />
+    <Resource Include="Resources\tag.png" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\External\CSharpUtils\LanguageUtils\LanguageUtils.csproj" />
     <ProjectReference Include="..\External\CSharpUtils\WPFUtils\WPFUtils.csproj" />
@@ -31,21 +84,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DiffPlex" Version="1.4.4" />
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="3.6.0" />
-    <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.0.8" />
-    <PackageReference Include="jacobslusser.ScintillaNET" Version="3.6.3" />
+    <PackageReference Include="DiffPlex"                    Version="1.4.4" />
+    <PackageReference Include="Extended.Wpf.Toolkit"        Version="3.6.0" />
+    <PackageReference Include="Hardcodet.NotifyIcon.Wpf"    Version="1.0.8" />
+    <PackageReference Include="jacobslusser.ScintillaNET"   Version="3.6.3" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="3.0.0" />
-    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Ookii.Dialogs" Version="1.0" />
-    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
-    <PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
-    <PackageReference Include="WPFToolkit" Version="3.5.50211.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
+    <PackageReference Include="NETStandard.Library"         Version="2.0.3" />
+    <PackageReference Include="Newtonsoft.Json"             Version="12.0.1" />
+    <PackageReference Include="Ookii.Dialogs"               Version="1.0" />
+    <PackageReference Include="System.Numerics.Vectors"     Version="4.5.0" />
+    <PackageReference Include="System.Xml.XDocument"        Version="4.3.0" />
+    <PackageReference Include="WPFToolkit"                  Version="3.5.50211.1" />
   </ItemGroup>
 
 </Project>
