--- a/Source/Plugins/HeadlessPlugin/HeadlessPlugin.csproj
+++ b/Source/Plugins/HeadlessPlugin/HeadlessPlugin.csproj
@@ -10,7 +10,7 @@
 		<FileVersion>1.4.11.0</FileVersion>
 		<Version>1.4.11.0</Version>
 
-		<OutDir>..\..\..\Bin\$(Configuration)\$(TargetFramework)\Plugins\</OutDir>
+		<OutDir>..\..\..\Bin\$(Configuration)\Plugins\</OutDir>
 
 		<RootNamespace>AlephNote.Plugins.Headless</RootNamespace>
 	</PropertyGroup>
