--- a/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
+++ b/Source/Plugins/StandardNotePlugin/StandardNotePlugin.csproj
@@ -10,7 +10,7 @@
 		<FileVersion>1.7.0.0</FileVersion>
 		<Version>1.7.0.0</Version>
 
-		<OutDir>..\..\..\Bin\$(Configuration)\$(TargetFramework)\Plugins\</OutDir>
+		<OutDir>..\..\..\Bin\$(Configuration)\Plugins\</OutDir>
 
 		<RootNamespace>AlephNote.Plugins.StandardNote</RootNamespace>
 	</PropertyGroup>
